# fractal

./: CMakeLists.txt  README  TODO.txt
res/shader/: default.frag  default.vert
src/: fractal.cpp  fractal.h  glType.h  gui.cpp  gui.h  main.cpp  mandlebrot.cpp  mandlebrot.h  shader.cpp  shader.h  texture.cpp  texture.h  util.cpp  util.h  view.cpp  view.h
src/glad/: glad.c  glad.h
